--- a/CommandArgs.cabal
+++ b/CommandArgs.cabal
@@ -24,10 +24,11 @@ library
                        AList
 
   other-modules:       CArgs.Parser
+                       CArgs.Parsers.Internal
   -- other-extensions:
   build-depends:       base >=4.8 && <4.9
                      , containers > 0.5
-                     , EitherProjections >= 0.1
+                     , EitherProjections >= 0.1.1.1
                      , split >= 0.2.3
   hs-source-dirs:      src
   default-language:    Haskell2010
